word-wrap fixed this problem more elegantly.

--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,10 @@ label {
   display: block;
 }
 
+code {
+  word-wrap: break-word;
+}
+
 /*desktops*/
 @media only screen and (min-width:1100px) {
   .content {
